Fixed size of background for search categories, some were not covering all the width because of the ration and heigh setting

--- a/app/source/css/activities/home.styl
+++ b/app/source/css/activities/home.styl
@@ -238,7 +238,7 @@
                 li {
                     // background photo setup (will have an image per category)
                     background: White no-repeat top center / contain;
-                    background-size: auto 160px;
+                    background-size: auto 164px;
                     display: inline-block;
                     width: $boxSize;
                     margin: $boxMargin;
